--- a/developer-console/package.json
+++ b/developer-console/package.json
@@ -1,1 +1,18 @@
-
+{
+  "name": "developer-console",
+  "version": "1.0.0",
+  "description": "Developer Console backend for licenses, releases, and update manager",
+  "main": "src/server.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node src/server.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.7",
+    "uuid": "^9.0.1"
+  }
+}
