--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,16 @@
+APP_NAME=Portal
+APP_ENV=production
+APP_KEY=
+APP_DEBUG=false
+APP_URL=http://localhost
 
+LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=info
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=portal
+DB_USERNAME=root
+DB_PASSWORD=
