Prepare repository structure for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
 /node_modules
 /backend/vendor
 /frontend/node_modules
+/developer-console/node_modules
 /backend/.env
 /.env
 /vendor
+backend/bootstrap/cache/*
+!backend/bootstrap/cache/.gitkeep
+/developer-console/.env
+/developer-console/database.sqlite
+/update-manager/vendor
+/update-manager/.env
+update-manager/bootstrap/cache/*
+!update-manager/bootstrap/cache/.gitkeep
+/db5f8f4f72d5.json
 /.idea
 /.vscode
 /storage
